@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2023-10-10T08:14:05Z",
+  "timestamp" : "2023-10-11T00:48:56Z",
   "count_outdated" : 194,
   "uniques_outdated" : 167,
-  "count" : 207,
-  "uniques" : 178,
+  "count" : 208,
+  "uniques" : 179,
   "clones" : [
     {
       "timestamp": "2023-09-27T00:00:00Z",
@@ -79,12 +79,12 @@
     },
     {
       "timestamp": "2023-10-10T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
+      "uniques": 2,
+      "uniques_minmax": [ 1, 2 ],
+      "uniques_decinc": [ 0, 2 ]
     }
   ]
 }
