@@ -1,6 +1,6 @@
 {
-  "count": 13,
-  "uniques": 4,
+  "count": 14,
+  "uniques": 5,
   "clones": [
     {
       "timestamp": "2023-09-27T00:00:00Z",
@@ -44,8 +44,8 @@
     },
     {
       "timestamp": "2023-10-10T00:00:00Z",
-      "count": 1,
-      "uniques": 1
+      "count": 2,
+      "uniques": 2
     }
   ]
 }
